# py-cc-balancer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.claude/: settings.json
.claude/rules/: 01-pre-implementation.md  02-python-style.md  03-python-modern.md  04-no-hardcoding.md  05-security.md  06-no-spaghetti.md  07-module-organization.md  08-project-structure.md  09-performance.md  10-error-handling.md  11-testing.md  12-documentation.md  python-environment.md
.github/workflows/: release.yml
docs/: DESIGN.md  FIXES.md  IMPROVEMENTS.md  PROGRESS.md  RELEASE.md
docs/cctx/: 01-overview.md  02-exchanges.md  03-markets-intro-to-symbols-and-market-ids.md  04-markets-market-cache-force-reload.md  05-implicit-api.md  06-unified-api.md  17-error-handling.md  (+12 more)
packaging/: ccbalancer.spec
tests/: conftest.py  test_auth_store.py  test_cli_analyze.py  test_cli_audit.py  test_cli_auth.py  test_cli_errors.py  test_cli_execute.py  test_cli_flags.py  test_cli_indicators.py  test_cli_performance.py  test_cli_read.py  test_cli_regime.py  test_config.py  test_config_profile.py  test_decision_store.py  test_exchange.py  test_exchange_quirks.py  test_execution_manager.py  test_flags_manager.py  test_flags_store.py  test_indicator_registry.py  test_indicators.py  test_indicators_manager.py  test_ledger_store.py  test_market_cache.py  test_models.py  test_performance_manager.py  test_portfolio_manager.py  test_portfolio_store.py  test_rebalance_manager.py  test_regime_manager.py  test_render.py  test_state_store.py  test_utils.py
(+68 files in other folders)
